--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,5 @@ ban-message: "§4BANNED§r: <reason>\n\n§rThis ban will last for: §c <time>§r
 no-undo: "Nothing to do here!"
 unpunish-success: "§a<name>§7 successfully un<punishment>!"
 invalid-target: "§c<name>§7 is an invalid target!"
+chat-prefix: "§8§l[§5§lControl§8§l]§r"
+chat-header: "§8§l§m------------§r"
