--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,3 +4,15 @@ unpunish-success: "§a<name>§7 successfully un<punishment>!"
 invalid-target: "§c<name>§7 is an invalid target!"
 chat-prefix: "§8§l[§5§lControl§8§l]§r"
 chat-header: "§8§l§m------------§r"
+# "ban" "mute" "banip"
+punishment-type: "mute"
+# #<m/h/d/w>
+# 10m - 10 minutes
+# 1d    - 1 day
+# 3h  - 3 hours
+# etc.
+punishment-length: "5m"
+# Server's description
+home: "A Minecraft Server"
+ad-check-message: "§7Are you advertising? Give us a minute to check..."
+not-ad-message: "§7You're not advertising. Sorry about that."
