--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,3 +16,4 @@ punishment-length: "5m"
 home: "A Minecraft Server"
 ad-check-message: "§7Are you advertising? Give us a minute to check..."
 not-ad-message: "§7You're not advertising. Sorry about that."
+admin-chat-prefix: "!!"
