--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,18 @@
+# Valid formatters: <reason>, <time>, <end>
 ban-message: "§4BANNED§r: <reason>\n\n§rThis ban will last for: §c <time>§r\n\n§rExpiring at: §c<end>§r"
+
+# Command appearances.
 no-undo: "Nothing to do here!"
+# Valid formatters: <name>, <punishment>
 unpunish-success: "§a<name>§7 successfully un<punishment>!"
+# Valid formatters: <name>
 invalid-target: "§c<name>§7 is an invalid target!"
+
+# Chat appearance
 chat-prefix: "§8§l[§5§lControl§8§l]§r"
 chat-header: "§8§l§m------------§r"
+
+# For automatic advertisement punishment
 # "ban" "mute" "banip"
 punishment-type: "mute"
 # #<m/h/d/w>
@@ -12,8 +21,13 @@ punishment-type: "mute"
 # 3h  - 3 hours
 # etc.
 punishment-length: "5m"
-# Server's description
+
+# Part of server's description goes here
 home: "A Minecraft Server"
 ad-check-message: "§7Are you advertising? Give us a minute to check..."
 not-ad-message: "§7You're not advertising. Sorry about that."
-admin-chat-prefix: "!!"
+
+# Valid values: "sqlite"
+# This is because SQLite is serverless so less painful to develop for...
+# NEVER CHANGE THIS ONCE IT HAS BEEN SET
+sql-mode: "sqlite"
