--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ description: skirts' plugin for banning and whatnot
 authors: [skirts]
 website: https://curlpipesh.me/
 depend: [SkirtsUsers, SkirtsUtil]
+loadbefore: [Essentials]
 
 permissions:
   control.*:
