--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.curlpipesh.control</groupId>
-    <artifactId>Control</artifactId>
+    <artifactId>SkirtsControl</artifactId>
     <version>0.2.0</version>
 
     <dependencies>
