--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.ikeirnez.communicationsframework</groupId>
+            <artifactId>api</artifactId>
+            <version>3.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>me.curlpipesh.util</groupId>
             <artifactId>Util</artifactId>
             <version>0.1.0</version>
