--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,14 @@
         </dependency>
 
         <dependency>
-            <groupId>me.curlpipesh.util</groupId>
+            <groupId>lgbt.audrey.util</groupId>
             <artifactId>Util</artifactId>
-            <version>0.1.0</version>
+            <version>0.2.0</version>
         </dependency>
         <dependency>
-            <groupId>me.curlpipesh.users</groupId>
+            <groupId>lgbt.audrey.users</groupId>
             <artifactId>Users</artifactId>
-            <version>0.1.0</version>
+            <version>0.2.0</version>
         </dependency>
     </dependencies>
 
